.provarCaches/00D6C0000000xA6UAI/objects/ccrz__E_Category__c.object
<CustomObject>
    <description>Product Category detail record</description>
    <fields>
        <fullName>Tdev1id__c</fullName>
        <description>Used for data migration from Transdev1 to Partial</description>
        <externalId>true</externalId>
        <label>Tdev1id</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>ccrz__CategoryID__c</fullName>
        <description>External Id used for mapping the category to an externally defined entity</description>
        <externalId>true</externalId>
        <label>Category ID</label>
        <length>128</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>ccrz__ChildCategoryCount__c</fullName>
        <description>Formula - set to the number of child categories within this category</description>
        <label>Child Category Count</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ccrz__DataId__c</fullName>
        <description>B2B Commerce internal use only except when used with ccApiTestData.</description>
        <externalId>true</externalId>
        <inlineHelpText>B2B Commerce internal use only except when used with ccApiTestData.</inlineHelpText>
        <label>DataId</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>ccrz__EndDate__c</fullName>
        <defaultValue>DATEVALUE(&quot;2099-12-31&quot;)</defaultValue>
        <description>The end date for which this category is active. After this date the category will no longer be displayed.</description>
        <label>End Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ccrz__LongDescRT__c</fullName>
        <description>Long description as a rich text field</description>
        <label>LongDescRT</label>
        <length>5000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>ccrz__LongDesc__c</fullName>
        <description>Long description of the category, usually containing more formatted marketing content.</description>
        <label>Long Desc</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ccrz__ParentCategory__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Used when building a category hierarchy. Contains a reference to this same object, pointing to the parent of this entry</description>
        <label>Parent Category</label>
        <referenceTo>ccrz__E_Category__c</referenceTo>
        <relationshipLabel>E_Categories</relationshipLabel>
        <relationshipName>Categories</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ccrz__ProductCount__c</fullName>
        <description>Formula - set to the number of products within the category</description>
        <label>Product Count</label>
        <summaryForeignKey>ccrz__E_ProductCategory__c.ccrz__Category__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>ccrz__SEOId__c</fullName>
        <description>A shortened name for the category. This is used when constructing friendly URLs.</description>
        <externalId>true</externalId>
        <inlineHelpText>A shortened name for the category. This is used when constructing friendly URLs.</inlineHelpText>
        <label>SEO Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ccrz__Sequence__c</fullName>
        <defaultValue>500</defaultValue>
        <description>Used for ordering categories within a parent category</description>
        <label>Sequence</label>
        <precision>8</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ccrz__ShortDescRT__c</fullName>
        <description>Short category description as a rich text field.</description>
        <label>ShortDescRT</label>
        <length>2000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>ccrz__ShortDesc__c</fullName>
        <description>Short description of the category</description>
        <label>Short Desc</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ccrz__StartDate__c</fullName>
        <defaultValue>Today()</defaultValue>
        <description>The start date for which this category is active. This is the first date the category will be displayed.</description>
        <label>Start Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <label>CC Category</label>
    <listViews>
        <fullName>ALL_APPAREL_ACCESSORIES</fullName>
        <columns>NAME</columns>
        <columns>ccrz__Sequence__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ccrz__ParentCategory__c</field>
            <operation>equals</operation>
            <value>APPAREL &amp; ACCESSORIES</value>
        </filters>
        <label>ALL APPAREL &amp; ACCESSORIES</label>
    </listViews>
    <listViews>
        <fullName>ALL_BOOKS_DVDS</fullName>
        <columns>NAME</columns>
        <columns>ccrz__Sequence__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ccrz__ParentCategory__c</field>
            <operation>equals</operation>
            <value>BOOKS &amp; DVDS</value>
        </filters>
        <label>ALL BOOKS &amp; DVDS</label>
    </listViews>
    <listViews>
        <fullName>ALL_EMERGENCY_PREPAREDNESS</fullName>
        <columns>NAME</columns>
        <columns>ccrz__Sequence__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ccrz__ParentCategory__c</field>
            <operation>equals</operation>
            <value>EMERGENCY PREPAREDNESS</value>
        </filters>
        <label>ALL  EMERGENCY PREPAREDNESS</label>
    </listViews>
    <listViews>
        <fullName>ALL_FIRST_AID_SUPPLIES</fullName>
        <columns>NAME</columns>
        <columns>ccrz__Sequence__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ccrz__ParentCategory__c</field>
            <operation>equals</operation>
            <value>FIRST AID SUPPLIES</value>
        </filters>
        <label>ALL FIRST AID SUPPLIES</label>
    </listViews>
    <listViews>
        <fullName>ALL_TRAINING_SUPPLIES</fullName>
        <columns>NAME</columns>
        <columns>ccrz__Sequence__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ccrz__ParentCategory__c</field>
            <operation>equals</operation>
            <value>TRAINING SUPPLIES</value>
        </filters>
        <label>ALL TRAINING SUPPLIES</label>
    </listViews>
    <listViews>
        <fullName>Supplies_Products</fullName>
        <columns>NAME</columns>
        <columns>ccrz__Sequence__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ccrz__ParentCategory__c</field>
            <operation>equals</operation>
            <value>Supplies &amp; Products</value>
        </filters>
        <label>Supplies &amp; Products</label>
    </listViews>
    <listViews>
        <fullName>ccrz__All</fullName>
        <columns>ccrz__CategoryID__c</columns>
        <columns>NAME</columns>
        <columns>ccrz__StartDate__c</columns>
        <columns>ccrz__EndDate__c</columns>
        <columns>OBJECT_ID</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>ccrz__All1</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Category Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CC Categories</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>